<resources>
    <string name="app_name">Carrot</string>

    <string name="home">홈</string>
    <string name="life">동네생활</string>
    <string name="nearby">내 근처</string>
    <string name="chatting">채팅</string>
    <string name="my_carrot">나의 당근</string>
    <string name="join_meeting_title">모임 이름</string>
    <string name="join_meeting_look_member">40명의 멤버 보기</string>
    <string name="excercise">운동</string>
    <string name="join_meeting_age">23~53세</string>
    <string name="join_meeting_everything">전체</string>
    <string name="join_meeting_album">앨범</string>
    <string name="join_meeting_schedule">일정</string>
    <string name="join_meeting_notice">게시판</string>
    <string name="join_meeting_album4">앨범 4</string>
    <string name="join_meeting_64">일정 64</string>
    <string name="join_meeting_november">11월</string>
    <string name="_8">8</string>
    <string name="join_meeting_alert_text">모임에만 공개된 일정이에요.</string>
    <string name="recruiting">모집중</string>
    <string name="join_meeting_04_00">오후 04:00</string>
    <string name="join_meeting_2_8">2/8명</string>
    <string name="look_everything">전체보기</string>
    <string name="join_meeting_48">게시판 48</string>
    <string name="title">제목</string>
    <string name="content">내용</string>
    <string name="_0">0</string>
    <string name="join_meeting">모임 가입하기</string>

    <!-- 동네 생활 string resources -->
    <string name="sample_neighborhood_name">동천동</string>
    <string name="explore_meeting">모임 더 둘러보기</string>
    <string name="empty_list">빈 리스트 입니다.</string>

    <!-- 프로필 -->
    <string name="profile_title">먼저 모임 프로필을\n만들어주세요</string>
    <string name="profile_sub_title">모든 모임에서 동일하게 사용하는 프로필이에요.</string>
    <string name="nickname">닉네임</string>
    <string name="input_nickname">닉네임을 입력해주세요.</string>
    <string name="self_introduce">자기소개</string>
    <string name="input_self_introduce">자기소개를 입력해주세요.</string>
    <string name="join">가입하기</string>
    <string name="text_length12">%s/12</string>
    <string name="text_length200">%s/200</string>
  
    <string name="tv_explore_meeting_title">동천동 모임</string>
    <string name="etv_hint_search">우리 동네 모임을 검색해보세요.</string>
    <string name="tv_tab_title1">전체모임</string>
    <string name="tv_tab_title2">나의 모임 일정</string>
    <string name="tv_neighbor_title">우리동네 모임</string>
    <string name="tv_new">새로 생겼어요</string>
    <string name="tv_all_view">전체보기</string>
    <string name="tv_exlplore_meeting">모임 둘러보기</string>
    <string name="tv_want_meeting">원하는 모임이 없나요?</string>
    <string name="tv_see_long_town">먼 동네의 모임 보기</string>
    <string name="tv_write">글쓰기</string>
    <string name="join_meeting_look_more">더보기</string>
</resources>