<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            tools:context=".presentation.profile.ProfileActivity">

            <TextView
                android:id="@+id/tv_profile_title"
                style="@style/TextAppearance.AppleSDGothic.TitleHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:text="@string/profile_title"
                android:textColor="@color/carrot_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_sub_title"
                style="@style/TextAppearance.AppleSDGothic.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/profile_sub_title"
                android:textColor="@color/carrot_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_title" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:background="@drawable/shape_white_circle"
                android:backgroundTint="@color/carrot_grey200"
                android:src="@drawable/ic_empty_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_sub_title" />

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_circle"
                android:backgroundTint="@color/carrot_white"
                android:padding="6dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintEnd_toEndOf="@id/iv_profile" />

            <androidx.constraintlayout.helper.widget.Layer
                android:id="@+id/iv_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iv_camera,iv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_sub_title" />

            <org.sopt.carrot.presentation.view.CarrotInputLayout
                android:id="@+id/carrot_input_layout_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:hint="@string/input_nickname"
                android:maxLength="12"
                android:minHeight="54dp"
                android:text="@string/nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile" />

            <org.sopt.carrot.presentation.view.CarrotInputLayout
                android:id="@+id/carrot_input_layout_self_introduce"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/input_self_introduce"
                android:maxLength="200"
                android:minHeight="102dp"
                android:text="@string/self_introduce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/carrot_input_layout_nickname" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_join_meeting"
                style="@style/TextAppearance.AppleSDGothic.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/sel_profile_button"
                android:enabled="false"
                android:paddingVertical="18dp"
                android:text="@string/join"
                android:textColor="@color/carrot_grey300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
