<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_join_meeting_rv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/apple_sd_gothic_neo_m"
        android:text="@string/title"
        android:textColor="@color/carrot_grey400"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_join_meeting_rv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/apple_sd_gothic_neo_m"
        android:maxLines="1"
        android:text="@string/content"
        android:textColor="@color/carrot_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tv_join_meeting_rv_title"
        app:layout_constraintTop_toTopOf="@id/tv_join_meeting_rv_title"
        app:layout_constraintEnd_toStartOf="@id/iv_join_meeting_like_icon"/>

    <ImageView
        android:id="@+id/iv_join_meeting_like_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_liked_circle"
        app:layout_constraintBottom_toBottomOf="@id/tv_join_meeting_rv_like_num"
        app:layout_constraintEnd_toStartOf="@id/tv_join_meeting_rv_like_num"
        app:layout_constraintTop_toTopOf="@id/tv_join_meeting_rv_like_num" />

    <TextView
        android:id="@+id/tv_join_meeting_rv_like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>